--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cors": "^2.8.5",
     "dotenv": "16.4.5",
     "express": "4.21.0",
+    "express-json-validator-middleware": "^3.0.1",
     "joi": "17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "3.11.2",
