[FEATURE] Add envs in back

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ DB_PASS='EAcr3j9OtqHqTqSo7h6A'
 DB_NAME='bb0ppsceson5l6annwsy'
 DB_PORT=3306
 SECRET_KEY="TElCRVJUWVRSQUNLRw=="
+FRONTEND="http://localhost:5173"
